# backtest-bias

./: BIAS_TABLE.md  CHANGELOG.md  README.md  pyproject.toml
backtest_bias/: __init__.py  core.py
tests/: test_core.py
