[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backtest-bias"
version = "0.1.0"
description = "Checks whether your backtest data is lying to you: survivorship, dead-name coverage, integrity gates for financial price panels."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ayan Jain" }]
requires-python = ">=3.9"
dependencies = ["pandas>=1.5", "numpy>=1.23"]
keywords = ["backtesting", "survivorship-bias", "quant", "data-quality", "point-in-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/Finance-broski/backtest-bias"

[tool.setuptools.packages.find]
include = ["backtest_bias*"]
